--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-common</artifactId>
           <version>2.6.0</version>
+          <scope>provided</scope>
       </dependency>
       <dependency>
           <groupId>org.apache.spark</groupId>
@@ -79,7 +80,7 @@
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-client</artifactId>
           <version>2.6.0</version>
-          <scope>compile</scope>
+          <scope>provided</scope>
       </dependency>
 
 
